<resources>
    <string name="app_name">MAD final</string>
    <string name="home">Home</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profilemanagement">Profile Management</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="updateprofile">Update Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="btnaddPM">Add</string>
</resources>